// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item tests should render a link correctly 1`] = `
<span>
  <li>
    <Link
      className=""
      replace={false}
      to="/to"
    >
      <span>
        <Icon
          name="Mail"
          size={18}
        />
      </span>
      label
    </Link>
  </li>
</span>
`;

exports[`Item tests should render children correctly 1`] = `
<span>
  <li>
    <a
      className=""
      onClick={[Function]}
    >
      <span>
        <Icon
          name="Mail"
          size={18}
        />
      </span>
      label
      <Icon
        name="ChevronLeft"
        size={18}
      />
    </a>
    <ul>
      <Item
        key="0"
        label="child 1"
        location={
          Object {
            "pathname": "to",
          }
        }
        to="/child1"
      />
      <Item
        key="1"
        label="child 2"
        location={
          Object {
            "pathname": "to",
          }
        }
        to="/child2"
      />
    </ul>
  </li>
</span>
`;
